2002-07-08  Wakaba <w@suika.fam.cx>

	* TypedText.pm: New module.

2002-06-29  Wakaba <w@suika.fam.cx>

	* ContentType.pm, Params.pm, ValueParams.pm,
	XMoe.pm: Rewritten.

2002-06-23  Wakaba <w@suika.fam.cx>

	* AngleQuoted.pm (%REG): Don't define regex locally.
	(Moved to Message::Util).
	* ContentType.pm, Date.pm, UA.pm,
	ValueParams.pm: Fix some codes not to be warned
	as 'Use of uninitialized value'.
	* Structured.pm 
	(header_default_charset, header_default_charset_input):
	New options.

2002-06-16  wakaba <w@suika.fam.cx>

	* MsgID.pm: Check '.test' reserved TLD if '-validate'.
	* UA.pm (add_our_name): New method (moved from 
	Message::Entity).
	* ListID.pm, XFace.pm: New modules.

2002-06-15  wakaba <w@suika.fam.cx>

	* AngleQuoted.pm: New module.
	* Mailbox.pm, URI.pm: Use AngleQuoted.pm

2002-06-09  wakaba <w@suika.fam.cx>

	* Addresses.pm (_delete_match): 'addr-spec': new 'by' option.
	* ContentType.pm:
	- (_save_param): Call _parse_param_value if parse_all.
	- (_parse_value): New function.  Check Message::MIME::MediaType.
	* CSV.pm (use_comment): New option.
	* Date.pm:
	- (zone): New method.
	- (set_datetime): Likewise.
	* Mailbox.pm (display_name): New method.
	* Numval.pm (use_comment): New option.
	* Param.pm (_parse_param_value): New function.
	* Structured.pm:
	- (_add_return_value, _replace_return_value): New functions.
	- (_parse_value): Sync with Message::Entity's.
	- (option): Sync with Message::Entity's.
	- (option): '-recursive': new option.
	- (_option_recursive): New function.

2002-05-17  wakaba <w@suika.fam.cx>

	* Mailbox.pm: Bug fix and minor changes.
	* URI.pm: Remade.  It is now designed by M::F::Mailbox
	like interface.

2002-05-16  wakaba <w@suika.fam.cx>

	* Date.pm: Remade.

2002-05-15  wakaba <w@suika.fam.cx>

	* Address.pm: Removed.
	* Domain.pm: Bug fix (doesn't treat four-sub-domain-
	domain as (invalid) IPv4 address).
	* Mailbox.pm (addr_spec): New method.
	* Addresses.pm (addr_spec): Likewise.
	