@@ -1,3 +1,7 @@
+2002-07-13  Wakaba <w@suika.fam.cx>
+
+	* MDNDisposition.pm, ReportingUA.pm: New modules.
+
 2002-07-08  Wakaba <w@suika.fam.cx>
 
 	* TypedText.pm: New module.
